--- a/app_report.Rmd
+++ b/app_report.Rmd
@@ -112,7 +112,7 @@ text(1:7,datax01$rank,datax01$rank,pos = 3)
 datax02=datax0[which(datax0$app=='粉丝网畅销'),]
 plot(1:7,datax02$rank,type = "b",lty=2,pch=20,axes = F,xlab = "日期",ylab = "排名",col="#5B9BD5",ylim = c(max(datax02$rank,na.rm = T)%/%10*10+10,min(datax02$rank,na.rm = T)%/%10*10-10))
 axis(1,at=1:7,labels = c(format(as.Date(datax02$date), "%m/%d")))
-axis(2,at=seq(max(datax02$rank,na.rm = T)%/%10*10+10,min(datax02$rank,na.rm = T)%/%10*10-10,-20),las=2)
+axis(2,at=seq(max(datax02$rank,na.rm = T)%/%10*10+10,min(datax02$rank,na.rm = T)%/%10*10-10,-50),las=2)
 text(1:7,datax02$rank,datax02$rank,pos = 3)
 ```
 
@@ -154,7 +154,7 @@ xx2=barplot(t(active_user),col = c("#5B9BD5","#ED7D31"),ylim = c(0,max(active_us
 text(labels=active_user[,1],x=xx2,y=active_user[,1]/2)
 text(labels=active_user[,2],x=xx2,y=active_user[,1]+active_user[,2]-active_user[,2]*0.5)
 text(labels=paste("总:",active_user[,2]+active_user[,1]),x=xx2,y=(active_user[,1]+active_user[,2]),pos=3)
-legend(2.8,max(active_user)*1.4,pt.bg=c("#5B9BD5","#ED7D31"),c("andriod","ios"),pch = 22,pt.cex = 2)
+legend(6.8,max(active_user)*1.4,pt.bg=c("#5B9BD5","#ED7D31"),c("andriod","ios"),pch = 22,pt.cex = 2)
 ```
 <br>
 
@@ -187,7 +187,7 @@ axis(2,at=seq(0,height,1),labels = paste(seq(0,height,1),"%"),cex.axis=0.9)
 lines(1:7,rate_andriod,type = "b",pch=15,lty=2,col="#5B9BD5",lwd=2,cex=1.5)
  text(1:7,rate_iOS,labels = paste0(rate_iOS,"%"),pos=1,cex = 0.9,)
  text(1:7,rate_andriod,labels = paste0(rate_andriod,"%"),pos=3,cex = 0.9)
- legend(1,min(rate_andriod,rate_iOS),c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
+ legend(6,min(rate_andriod,rate_iOS)*5,c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
  
 ```
 
@@ -205,7 +205,7 @@ text(labels=datax6.1[,1],x=xx6[1,],y=datax6.1[,1]+max(datax6.1)*0.05,cex = 0.8)
 text(labels=datax6.1[,2],x=xx6[2,],y=datax6.1[,2]+max(datax6.1)*0.05,cex = 0.8)
 legend(8,max(datax6.1)*1,pt.bg=c("#5B9BD5","#ED7D31"),c("新用户","老用户"),pch = 22,pt.cex = 2)
 text(labels=name6.1,x=(xx6[2,]+xx6[1,])/2,y=-max(datax6.1)*0.17,srt=65,cex = 0.8)
-axis(2,at=seq(0,max(datax6.1)*1.3,50),labels =seq(0,max(datax6.1)*1.3,50) ,cex.axis=0.8,las=2)
+axis(2,at=seq(0,max(datax6.1)*1.3,200),labels =seq(0,max(datax6.1)*1.3,200) ,cex.axis=0.8,las=2)
 ```
 
 #<font size=4.5>9.渠道累计用户和活跃率-Andriod平台</font><br>
@@ -237,8 +237,8 @@ lines(cishu_andriod_t,cishu_andriod,type = "b",pch=15,lty=2,col="#5B9BD5",lwd=2,
  #text(cishu_andriod_t,cishu_andriod,labels = cishu_andriod,pos=3,cex = 0.8)
  legend(1.5,max(cishu_iOS,cishu_andriod),c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
  axis(side = 1,at=(0:24)-0.5,labels =0:24,cex.axis=0.73)
- axis(side=2,at=seq(0,max(max(cishu_iOS,cishu_andriod))+100,by=200),labels =seq(0,max(max(cishu_iOS,cishu_andriod))+100,by=200),cex.axis=0.85,las=2)
- abline(h=c(seq(0,max(max(cishu_iOS,cishu_andriod))+100,200)),lty=15,lwd=0.1)
+ axis(side=2,at=seq(0,max(max(cishu_iOS,cishu_andriod))+200,by=50),labels =seq(0,max(max(cishu_iOS,cishu_andriod))+200,by=50),cex.axis=0.85,las=2)
+ abline(h=c(seq(0,max(max(cishu_iOS,cishu_andriod))+200,50)),lty=15,lwd=0.1)
 ```
 
 #<font size=4.5>11.访问时长（按时间时长）</font><br>
