--- a/app_report.Rmd
+++ b/app_report.Rmd
@@ -13,7 +13,8 @@ yesterday=Sys.Date()-1
 iOS.id='984000de8c5c89df24f7d155'
 Andriod.id='8ea000eac15c89dfacd8d155'
 #conn <- dbConnect(MySQL(), dbname = "test", username="root", #password="1234",host="localhost",port=3306)
-conn <- dbConnect(MySQL(), dbname = "test", username="root", password="root",host="10.0.5.19",port=3306)
+conn <- dbConnect(MySQL(), dbname = "test", username="ifensi_com", password="fans_v2",host="10.0.5.13",port=3306)
+dbSendQuery(conn,'SET NAMES gbk')
 ss0 = sprintf("SELECT * FROM app_ranking where date>\"%s\" ",as.Date(yesterday-7))
 datax0= dbGetQuery(conn,ss0)
 
@@ -24,6 +25,8 @@ ss2.2 = sprintf("SELECT * FROM umeng_app_zts where date>\"%s\" and (app_id='9840
 datax2.2= dbGetQuery(conn,ss2.2)
 ss2.3 = sprintf("SELECT * FROM umeng_app_zts where date>\"%s\" and (app_id='984000de8c5c89df24f7d155' or app_id='8ea000eac15c89dfacd8d155')",as.Date(yesterday-37))
 datax2.3= dbGetQuery(conn,ss2.3)
+ss2.4 = sprintf("SELECT pm AS \"排名\",app_name as \"名称\"  FROM aso100 where date=\"%s\" limit 30 ",as.Date(yesterday))
+datax2.4= dbGetQuery(conn,ss2.4)
 datax$name=''
 datax[which(datax$app_id==iOS.id),]$name='iOS'
 datax[which(datax$app_id==Andriod.id),]$name='Andriod'
@@ -89,8 +92,8 @@ lbls <- paste(data1$name, pct)
 lbls <- paste(lbls,"%",sep="")
 pie(data1$lj_yh,col=c("#5B9BD5","#ED7D31"),clockwise = T, radius = 0.8,edges = 200,labels = lbls)
 title(main = "总累计用户")
-text(0.26,0.3,paste(data1$lj_yh[1],"人"))
-text(-0.28,-0.3,paste(data1$lj_yh[2],"人"))
+text(0.26,-0.3,paste(data1$lj_yh[1],"人"))
+text(-0.28,0.3,paste(data1$lj_yh[2],"人"))
 box()
 
 
@@ -102,7 +105,7 @@ box()
 datax01=datax0[which(datax0$app=='粉丝焦点'),]
 plot(1:7,datax01$rank,type = "b",lty=2,pch=20,axes = F,xlab = "日期",ylab = "排名",col="#5B9BD5",ylim = c(max(datax01$rank,na.rm = T)%/%100*100+100,min(datax01$rank,na.rm = T)%/%100*100-100))
 axis(1,at=1:7,labels = c(format(as.Date(datax01$date), "%m/%d")))
-axis(2,at=seq(max(datax01$rank,na.rm = T)%/%100*100+100,min(datax01$rank,na.rm = T)%/%100*100-100,-100),las=2)
+axis(2,at=seq(max(datax01$rank,na.rm = T)%/%100*100+100,min(datax01$rank,na.rm = T)%/%100*100,-100),las=2)
 text(1:7,datax01$rank,datax01$rank,pos = 3)
 ```
 <br>
@@ -110,11 +113,16 @@ text(1:7,datax01$rank,datax01$rank,pos = 3)
 <font size=4.5>近7日iOS平台中国娱乐分类内畅销排名(无排名则不上榜、无数据)</font><br>
 ```{r,echo=FALSE}
 datax02=datax0[which(datax0$app=='粉丝网畅销'),]
-plot(1:7,datax02$rank,type = "b",lty=2,pch=20,axes = F,xlab = "日期",ylab = "排名",col="#5B9BD5",ylim = c(max(datax02$rank,na.rm = T)%/%10*10+10,min(datax02$rank,na.rm = T)%/%10*10-10))
+plot(1:7,datax02$rank,type = "b",lty=2,pch=20,axes = F,xlab = "日期",ylab = "排名",col="#5B9BD5",ylim = c(max(datax02$rank,na.rm = T)%/%10*10+20,min(datax02$rank,na.rm = T)%/%10*10-20))
 axis(1,at=1:7,labels = c(format(as.Date(datax02$date), "%m/%d")))
-axis(2,at=seq(max(datax02$rank,na.rm = T)%/%10*10+10,min(datax02$rank,na.rm = T)%/%10*10-10,-50),las=2)
+axis(2,at=seq(max(datax02$rank,na.rm = T)%/%10*10+20,min(datax02$rank,na.rm = T)%/%10*10-20,-50),las=2)
 text(1:7,datax02$rank,datax02$rank,pos = 3)
 ```
+<br><font size=3.5>畅销排在粉丝网APP前面的列表（或前30名）：</font><br>
+```{r,echo=FALSE}
+print(datax2.4[,c(1,2)])
+```
+
 
 
 #<font size=4.5>3.最近一周内积累（总新增）用户：<font color="red">`r  sum(datax2[which(datax2$date>yesterday-7),]$xz_yh)`</font>人<br>
@@ -154,7 +162,7 @@ xx2=barplot(t(active_user),col = c("#5B9BD5","#ED7D31"),ylim = c(0,max(active_us
 text(labels=active_user[,1],x=xx2,y=active_user[,1]/2)
 text(labels=active_user[,2],x=xx2,y=active_user[,1]+active_user[,2]-active_user[,2]*0.5)
 text(labels=paste("总:",active_user[,2]+active_user[,1]),x=xx2,y=(active_user[,1]+active_user[,2]),pos=3)
-legend(6.8,max(active_user)*1.4,pt.bg=c("#5B9BD5","#ED7D31"),c("andriod","ios"),pch = 22,pt.cex = 2)
+legend(9,max(active_user)*1.5,pt.bg=c("#5B9BD5","#ED7D31"),c("andriod","ios"),pch = 22,pt.cex = 2)
 ```
 <br>
 
@@ -187,7 +195,7 @@ axis(2,at=seq(0,height,1),labels = paste(seq(0,height,1),"%"),cex.axis=0.9)
 lines(1:7,rate_andriod,type = "b",pch=15,lty=2,col="#5B9BD5",lwd=2,cex=1.5)
  text(1:7,rate_iOS,labels = paste0(rate_iOS,"%"),pos=1,cex = 0.9,)
  text(1:7,rate_andriod,labels = paste0(rate_andriod,"%"),pos=3,cex = 0.9)
- legend(6,min(rate_andriod,rate_iOS)*5,c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
+ legend(5.3,min(rate_andriod,rate_iOS)-0.3,c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
  
 ```
 
@@ -203,7 +211,7 @@ datax6.1=data.frame(datax6.1$xz_yh,datax6.1$l_yh)
 xx6=barplot(t(datax6.1),col = c("#5B9BD5","#ED7D31"),ylim = c(-max(datax6.1)*0.34,max(datax6.1)*1.3),ylab = "数量",beside = T,cex.names = 0.7,axes = F)
 text(labels=datax6.1[,1],x=xx6[1,],y=datax6.1[,1]+max(datax6.1)*0.05,cex = 0.8)
 text(labels=datax6.1[,2],x=xx6[2,],y=datax6.1[,2]+max(datax6.1)*0.05,cex = 0.8)
-legend(8,max(datax6.1)*1,pt.bg=c("#5B9BD5","#ED7D31"),c("新用户","老用户"),pch = 22,pt.cex = 2)
+legend(13,max(datax6.1)*1,pt.bg=c("#5B9BD5","#ED7D31"),c("新用户","老用户"),pch = 22,pt.cex = 2)
 text(labels=name6.1,x=(xx6[2,]+xx6[1,])/2,y=-max(datax6.1)*0.17,srt=65,cex = 0.8)
 axis(2,at=seq(0,max(datax6.1)*1.3,200),labels =seq(0,max(datax6.1)*1.3,200) ,cex.axis=0.8,las=2)
 ```
@@ -217,9 +225,9 @@ axis(2,at=seq(0,max(datax7$lj_yh)*1.7,1000),labels = seq(0,max(datax7$lj_yh)*1.7
 text(labels=datax7$lj_yh,x=xx7[,1],y=datax7$lj_yh+max(datax7$lj_yh)*0.1)
 datax7.1=round(datax7$hy_yh/datax7$lj_yh*100,digits = 2)
 
-lines(xx7[,1],datax7.1*100+4000,type = "b",col="#ED7D31",lwd=2,cex=1,pch=15)
-text(xx7[,1],(datax7.1*100+4000),labels = paste(datax7.1,"%"),pos=3,cex = 0.7)
-axis(side = 4,at=seq(4000,7000,1000),labels =paste((seq(4000,7000,1000)-4000)/100,"%"),cex.axis=0.7 ,las=2)
+lines(xx7[,1],datax7.1*100+5000,type = "b",col="#ED7D31",lwd=2,cex=1,pch=15)
+text(xx7[,1],(datax7.1*100+5000),labels = paste(datax7.1,"%"),pos=3,cex = 0.7)
+axis(side = 4,at=seq(5000,7000,1000),labels =paste((seq(5000,7000,1000)-5000)/100,"%"),cex.axis=0.7 ,las=2)
  text(labels=datax7$name,x=xx7-0.4,y=-900,srt=65,cex = 0.7,srt=65)
 
 ```
@@ -235,10 +243,10 @@ plot(cishu_iOS_t,cishu_iOS,type = "b",ylim=c(-5,max(cishu_iOS,cishu_andriod)*1.2
 lines(cishu_andriod_t,cishu_andriod,type = "b",pch=15,lty=2,col="#5B9BD5",lwd=2,cex=1)
  #text(cishu_iOS_t,cishu_iOS,labels = cishu_iOS,pos=1,cex = 0.8)
  #text(cishu_andriod_t,cishu_andriod,labels = cishu_andriod,pos=3,cex = 0.8)
- legend(1.5,max(cishu_iOS,cishu_andriod),c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
+ legend(1.5,max(cishu_iOS,cishu_andriod)-50,c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
  axis(side = 1,at=(0:24)-0.5,labels =0:24,cex.axis=0.73)
- axis(side=2,at=seq(0,max(max(cishu_iOS,cishu_andriod))+200,by=50),labels =seq(0,max(max(cishu_iOS,cishu_andriod))+200,by=50),cex.axis=0.85,las=2)
- abline(h=c(seq(0,max(max(cishu_iOS,cishu_andriod))+200,50)),lty=15,lwd=0.1)
+ axis(side=2,at=seq(0,max(max(cishu_iOS,cishu_andriod))+30,by=100),labels =seq(0,max(max(cishu_iOS,cishu_andriod))+30,by=100),cex.axis=0.85,las=2)
+ abline(h=c(seq(0,max(max(cishu_iOS,cishu_andriod))+30,100)),lty=15,lwd=0.1)
 ```
 
 #<font size=4.5>11.访问时长（按时间时长）</font><br>
