--- a/app_report.Rmd
+++ b/app_report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "粉丝网app数据报告"
 author: "数据部"
-date: '`r  Sys.Date()-1`'
+date: '`r  Sys.Date()-3`'
 output: 
   html_document: 
     self_contained: no
@@ -84,7 +84,7 @@ data2=data_rank[which(data_rank$DATE==yesterday),]
 ```
 基本情况<br>
 1.至昨日总累计用户 ：`r  data1$lj_yh[2]+data1$lj_yh[1]`人。<br>
-2.昨日新增用户 `r  sum(data1$xz_yh)`人、日活跃用户 `r sum(data1$hy_yh)`。<br>
+2.昨日新增用户 `r  sum(data1$xz_yh)`人、日活跃用户 `r sum(data1$hy_yh)`人。<br>
 3.IOS中国娱乐榜畅销排名为`r data2[which(data2$name=="娱乐(畅销)"),3]` 名、下载排名为`r data2[which(data2$name=="娱乐(免费)"),3]`名。<br>
 
 
@@ -218,25 +218,7 @@ text(labels=paste("总:",active_user2[,2]+active_user2[,1]),x=xx2,y=(active_user
 ```
 <br>
 
-#<font size=4.5>7.活跃用户比例(活跃用户/总累计用户)</font><br>
-```{r, echo=FALSE}
-active_andriod=as.numeric(as.character(datax$hy_yh_Andriod))
-active_iOS=as.numeric(as.character(datax$hy_yh_iOS))
-total_user_andriod=as.numeric(as.character(datax$lj_yh_Andriod))
-total_user_iOS=as.numeric(as.character(datax$lj_yh_iOS))
-rate_andriod=round(active_andriod/total_user_andriod*100,digits = 2)
-rate_iOS=round(active_iOS/total_user_iOS*100,digits = 2)
-nn=c(format(as.Date(datax$date), "%m/%d"))
-height=round(max(max(rate_iOS),max(rate_andriod))*1.3)
-plot(1:7,rate_iOS,type = "b",ylim=c(0,max(rate_andriod,rate_iOS)*1.3),pch=17,lty=1,col="#ED7D31",lwd=2,cex=1.5,axes = F,xlab = "日期",ylab = "活跃率")
-axis(1,at=1:7,labels = nn)
-axis(2,at=seq(0,height,1),labels = paste(seq(0,height,1),"%"),cex.axis=0.9)
-lines(1:7,rate_andriod,type = "b",pch=15,lty=2,col="#5B9BD5",lwd=2,cex=1.5)
- text(1:7,rate_iOS,labels = paste0(rate_iOS,"%"),pos=1,cex = 0.9,)
- text(1:7,rate_andriod,labels = paste0(rate_andriod,"%"),pos=3,cex = 0.9)
- legend(5.3,min(rate_andriod,rate_iOS)-0.3,c("Andriod","iOS"),pch = c(15,17),col = c("#5B9BD5","#ED7D31"))
- 
-```
+
 
 #<font size=4.5>8.渠道活跃用户-Andriod</font><br>
 ```{r echo=FALSE}
